--- a/Pamper-Front/package.json
+++ b/Pamper-Front/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "element-plus": "^2.11.8",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15"
   },
