--- a/Pamper-Front/.env
+++ b/Pamper-Front/.env
@@ -1,4 +1,4 @@
 # Backend API base URL
 # Copy to .env or .env.local and adjust as needed
-# VITE_API_BASE_URL=http://47.97.44.200:8080
-VITE_API_BASE_URL=http://localhost:8080
+VITE_API_BASE_URL=http://47.97.44.200:8080
+# VITE_API_BASE_URL=http://localhost:8080
