--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,10 @@ server:
   port: 8080
 mybatis:
   mapper-locations: classpath*:mappers/**/*.xml
-  type-aliases-package: com.work.pamper.mybatis.entity
+  type-aliases-package: com.work.pamper.entity
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.97.44.200:3306/pamper?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
-    username: root
-    password: Zdm@123
+    url: ${DB_URL:jdbc:mysql://db:3306/pamper?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8}
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:Zdm@123}
